# Lease.Server.Grpc

./: CMakeLists.txt  vcpkg.json
docs/: Architecture.md
public/PiSubmarine/Lease/Server/Grpc/: Adapter.h  ErrorCode.h  Server.h
src/: CMakeLists.txt
src/PiSubmarine/Lease/Server/Grpc/: Adapter.cpp  ErrorCode.cpp  Server.cpp
test/: CMakeLists.txt
test/PiSubmarine/Lease/Server/Grpc/: ErrorCodeTest.cpp  ServerTest.cpp
